--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
+<title>DEVBMJ - Home</title>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>DEVBMJ</h1>
+<p>This is the homepage for DEVBMJ.COM</p>
 </body>
 </html>
