--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <title>DEVBMJ - Home</title>
 <body>
+<link href="https://fonts.googleapis.com/css?family=Bebas+Neue|Bungee|Geo|Major+Mono+Display|Rajdhani:400,600|Tomorrow:300,400,600&display=swap" rel="stylesheet">
 <h1>DEVBMJ</h1>
 <p>This is the homepage for DEVBMJ.COM</p>
 </body>
