--- a/index.html
+++ b/index.html
@@ -1,9 +1,39 @@
 <!DOCTYPE html>
 <html>
 <title>DEVBMJ - Home</title>
-<body>
-<link href="https://fonts.googleapis.com/css?family=Bebas+Neue|Bungee|Geo|Major+Mono+Display|Rajdhani:400,600|Tomorrow:300,400,600&display=swap" rel="stylesheet">
-<h1>DEVBMJ</h1>
-<p>This is the homepage for DEVBMJ.COM</p>
-</body>
+
+    <body>
+    
+    <div class="container">
+        <div class="bg">
+           <div class="content">
+              <div id="large-header" class="large-header">
+                 <canvas id="bg1-canvas"></canvas>
+                 <h1 class="main-title">DEV><span class="thin">BMJ</span></h1>
+              </div>
+           </div>
+       </div>
+    <link href="https://fonts.googleapis.com/css?family=Bebas+Neue|Bungee|Geo|Major+Mono+Display|Rajdhani:400,600|Tomorrow:300,400,600&display=swap" rel="stylesheet">
+
+    <div class="panel" data-color="black">
+      <h2>Homepage</h2>
+    </div>
+    <div class="panel" data-color="blue">
+      <h2>Projects</h2>
+    </div>
+    <div class="panel" data-color="orange">
+      <h2>Neat, huh?</h2>
+    </div>
+    </div>
+
+
+
+    <script src="jquery-2.2.4.min.js"></script>
+    <script src="color_scroll.js"></script>
+    <script src="TweenLite.min.js"></script>
+    <script src="EasePack.min.js"></script>
+    <script src="demo.js"></script>
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    </body>
+
 </html>
